# palworld-server-tool

./: Makefile  README.agent.en.md  README.agent.ja.md  README.agent.md  README.en.md  README.ja.md  README.md  build.ps1  cspell.json  main.go
.github/workflows/: build.yml
internal/config/: config.go
internal/system/: content-types.disabled.go
internal/task/: task.go
internal/tool/: rcon.go  save.go
module/: .gitignore  .pyproject.toml  Dockerfile  activate_venv.ps1  build.bat  build.sh  pyinstaller.py  pyproject.toml  requirements.txt
module/gen_work/: __init__.py  gen_pal_skills.py  gen_pal_type.py  gen_template.py
module/sav_cli/: __init__.py  logger.py  pal_skills.py  pal_type.py  structurer.py  world_types.py
script/: build-docker.sh
service/: guild.go  player.go  rcon.go
test/: config.yaml
web/: vite.config.js
web/src/: App.vue
web/src/assets/: common.less  i18n.js  item.json
web/src/views/MobileHome/: MobileHome.vue
web/src/views/MobileHome/component/: GuildDetail.vue  GuildList.vue  PlayerDetail.vue  PlayerList.vue
web/src/views/PcHome/: PcHome.vue
web/src/views/PcHome/component/: GuildList.vue  PlayerDetail.vue  PlayerList.vue
