[tool.poetry]
name = "sav_cli"
version = "0.1.0"
description = ""
authors = [
  "thakyZ <950594+thakyZ@users.noreply.github.com>",
  "zaigie <jokerwho@yeah.net>",
  "MagicBear <magicbearmo@gmail.com>"
]
license = "Apache License 2.0"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.10"
requests = "^2.31.0"
palworld-save-tools = "^0.19.0"
palworld-save-tools-stubs = {git = "https://github.com/thakyz/palworld-save-tools-stubs.git"}
types-requests = "^2.31.0.20240218"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
autopep8 = "*"
black = "*"
isort = "*"
mypy = "*"
pylint = "*"
pip = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["palworld-save-tools-stubs"]
exclude = ["tests"]
ignore = [
    "env",
    "**/__pycache__",
    "**/build",
    "typestubs",
    "examples",
]
typeCheckingMode = "standard"
reportArgumentType = "off"
pythonVersion = "3.9"
